# LEGEND

./: .gitignore  LICENSE  README.md  bciciv2a_results_final.pkl  physionet_full_results_final.pkl  physionet_results_adaptive_full.pkl  pyproject.toml  requirements.txt  steele_results_adaptive.pkl  steele_results_enhanced.pkl  steele_results_phase4.pkl
configs/: default.yaml  physionet_config.yaml
results/: cpu_latency.json  gradcam_all_folds.txt  pathways_annotated.csv
results/ablation_eeg_only/: summary.json
results/ablation_no_emg/: summary.json
results/ablation_no_esg/: summary.json
results/baselines_BrainTopoGCN/: loso_summary.json
results/baselines_EEGNet/: loso_summary.json
results/baselines_EEG_GLT-Net/: loso_summary.json
results/baselines_SAMGCN/: loso_summary.json
results/euclidean_gnn_loso/: loso_summary.json
scripts/: bench_timing.py  convert_steele_mat.py  generate_all_figures.py  generate_publication_figures.py  measure_cpu_latency.py  preprocess_physionet_data.py  reextract_pathways.py  reextract_pathways_gradcam.py  regen_fig2_fig6.py  smoke_hybrid.py  train_ablation_loso.py  train_bciciv2a.py  train_bciciv2a_adaptive.py  train_bciciv2a_adaptive_full.py  train_bciciv2a_baselines_loso.py  train_bciciv2a_enhanced.py  train_euclidean_gnn_loso.py  train_hybrid_loso.py  train_loso.py  train_loso_adaptive.py  train_loso_enhanced.py  train_loso_ensemble.py  train_loso_phase4.py  train_physionet.py  train_physionet_adaptive_full.py  train_physionet_full.py  train_physionet_stratified.py  train_steele_baselines.py  validate_pathway_anatomy.py
(+179 files in other folders)
